# cpp-concepts

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: README.md
examples/advanced/: CMakeLists.txt  README.md
examples/advanced/concurrency/: CMakeLists.txt  concurrency_demo  concurrency_demo.cpp
examples/advanced/coroutines/: CMakeLists.txt  coroutines_demo  coroutines_demo.cpp
examples/advanced/dsa/: CMakeLists.txt  dsa.h  dsa_demo  dsa_demo.cpp  dsa_tests  dsa_tests.cpp
examples/advanced/modern_cpp/: CMakeLists.txt  modern_cpp_demo  modern_cpp_demo.cpp
examples/advanced/templates/: CMakeLists.txt  templates_demo  templates_demo.cpp
examples/advanced/thread_pool/: CMakeLists.txt  thread_pool.h  thread_pool_demo  thread_pool_demo.cpp  thread_pool_tests
examples/advanced/thread_pool/test/: CMakeLists.txt  thread_pool_tests.cpp
examples/algorithms/: CMakeLists.txt  algorithms_demo.cpp
examples/arrays_vectors/: CMakeLists.txt  arrays_vectors_demo.cpp
examples/basics/: hello_world.cpp
examples/concepts/: CMakeLists.txt  concepts_demo.cpp
examples/concurrency/: CMakeLists.txt  concurrency_demo.cpp
examples/control_flow/: CMakeLists.txt  control_flow_demo.cpp
examples/coroutines/: CMakeLists.txt  coroutines_demo.cpp
examples/data_types/: CMakeLists.txt  data_types_demo.cpp
examples/design_patterns/: CMakeLists.txt  design_patterns_demo.cpp
examples/exceptions/: CMakeLists.txt  exceptions_demo  exceptions_demo.cpp
examples/file_io/: CMakeLists.txt  file_io_demo.cpp
examples/functions/: CMakeLists.txt  functions_demo.cpp
examples/memory_management/: CMakeLists.txt  memory_demo.cpp
examples/memory_pools/: CMakeLists.txt  memory_pools_demo  memory_pools_demo.cpp
examples/modern_cpp/: CMakeLists.txt  modern_cpp_demo.cpp
examples/move_semantics/: CMakeLists.txt  move_semantics_demo.cpp
examples/oop/: CMakeLists.txt  oop_demo.cpp
examples/parallel_algorithms/: CMakeLists.txt  parallel_algorithms_demo.cpp
examples/performance_optimization/: CMakeLists.txt  performance_optimization_demo  performance_optimization_demo.cpp
examples/plugin_system/: CMakeLists.txt  plugin_system_demo  plugin_system_demo.cpp
examples/pointers_references/: CMakeLists.txt  pointers_references_demo.cpp
examples/ranges/: CMakeLists.txt  ranges_demo.cpp
examples/serialization/: CMakeLists.txt  serialization_demo.cpp
examples/simd_operations/: CMakeLists.txt  simd_operations_demo.cpp
examples/stl/: CMakeLists.txt  stl_demo.cpp
examples/strings/: CMakeLists.txt  strings_demo  strings_demo.cpp
examples/template_metaprogramming/: CMakeLists.txt  template_metaprogramming_demo  template_metaprogramming_demo.cpp
examples/templates/: CMakeLists.txt  templates_demo  templates_demo.cpp
test/: CMakeLists.txt  test_main.cpp
