cmake_minimum_required(VERSION 3.10)
project(CppConceptsExamples)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add all example subdirectories
add_subdirectory(examples/basics)
add_subdirectory(examples/data_types)
add_subdirectory(examples/control_flow)
add_subdirectory(examples/functions)
add_subdirectory(examples/arrays_vectors)
add_subdirectory(examples/pointers_references)
add_subdirectory(examples/strings)
add_subdirectory(examples/exceptions)
add_subdirectory(examples/oop)
add_subdirectory(examples/memory_management)
add_subdirectory(examples/stl)
add_subdirectory(examples/advanced)
add_subdirectory(examples/file_io)
add_subdirectory(examples/move_semantics)
add_subdirectory(examples/algorithms)
add_subdirectory(examples/design_patterns)
add_subdirectory(examples/serialization)
add_subdirectory(examples/memory_pools)
add_subdirectory(examples/template_metaprogramming)
add_subdirectory(examples/performance_optimization)
add_subdirectory(examples/plugin_system)
add_subdirectory(examples/coroutines)
add_subdirectory(examples/concepts)
add_subdirectory(examples/ranges)
add_subdirectory(examples/parallel_algorithms)
add_subdirectory(examples/simd_operations)

# Add tests
add_subdirectory(test)
